--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,7 +5,6 @@
 
 
 // Generic: Very far reaching selectors. In this case, we set box-sizing and reset browsers defaults.
-@import 'generic/box-sizing';
 @import 'generic/reset';
 @import 'generic/form-reset';
 
@@ -15,10 +14,9 @@
 @import 'base/type';
 
 
-// Components: The bulk of our code: Defined peices of the site selected with classes and using BEM where appropriate.
+// Components: The bulk of our code: Defined pieces of the site selected with classes and using BEM.
 @import 'components/nav';
 
 
-// Nothing to do with Donald.
 // Overrides, helpers and utilities; our most specific selectors that should always trump earlier rules.
 @import 'trumps/helpers';
