--- a/src/sass/trumps/_helpers.scss
+++ b/src/sass/trumps/_helpers.scss
@@ -1,6 +1,2 @@
 // These helpers are last in the style sheet as they must be respected.
-// In this scenario, using !important is totally acceptable.
-
-.visually-hidden {
-  display: none !important;
-}
+// In this scenario, using !important is acceptable.
